# VitalPy

./: .gitignore  README.md  ppg_example.py  pyproject.toml  requirements.txt
src/ppg/: PPGSignal.py  params.py  utils.py
src/ppg/features/: FeatureExtractor.py  features_config.py  statistical_features.py  temporal_features.py  utils.py
src/ppg/preprocess/: Preprocessor.py  concatenate.py  filter_baseline.py  polyfit.py  similarity.py  validate.py
src/vitalpy/: __init__.py
src/vitalpy/ppg/: PPGSignal.py  __init__.py  params.py  utils.py
src/vitalpy/ppg/features/: FeatureExtractor.py  features_config.py  spectral_features.py  temporal_features.py  utils.py
src/vitalpy/ppg/preprocess/: Preprocessor.py  polyfit.py  segment.py  similarity.py  validate.py
src/vitalpython/: __init__.py
src/vitalpython/ppg/: PPGSignal.py
src/vitalpython/ppg/preprocess/: Preprocessor.py  polyfit.py  segment.py  similarity.py  validate.py
